tests/paczka1/fuzzy1/83017995.err
Error in line 3: l0vhx A208 45,1
Error in line 11: lATbE S843 77,4
Error in line 8: l0vhx S863 80,2
Error in line 18: F7Yclrmndf S863 14,1
Error in line 16: FUPcMYo5 S698 1,2
Error in line 25: F7Yclrmndf A208 70,6
Error in line 23: aqb S843 26,3
